[gd_scene load_steps=5 format=3 uid="uid://ovamm1046h7m"]

[ext_resource type="Script" path="res://Scripts/test_game.gd" id="1_fi6og"]
[ext_resource type="PackedScene" uid="uid://cj2g7ev1pnv21" path="res://Scenes/test_tilemap.tscn" id="2_nj7h2"]
[ext_resource type="PackedScene" uid="uid://crb3jtsn0hcmc" path="res://Scenes/in_game_ui.tscn" id="3_4433h"]
[ext_resource type="AudioStream" uid="uid://c8afplqel75ka" path="res://Assets/Short Retro Platformer Loop #1.mp3" id="4_a3gbj"]

[node name="test_game" type="Node2D" node_paths=PackedStringArray("Action_1", "Action_2", "Action_3")]
script = ExtResource("1_fi6og")
map_scene = ExtResource("2_nj7h2")
Action_1 = NodePath("in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_1")
Action_2 = NodePath("in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_2")
Action_3 = NodePath("in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_3")

[node name="in_game_ui" parent="." instance=ExtResource("3_4433h")]
script = null

[node name="UIBackground" type="ColorRect" parent="in_game_ui"]
top_level = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -128.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="GameUI" type="Control" parent="in_game_ui/UIBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -45.0
offset_right = 550.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="RightCenterContainer" type="CenterContainer" parent="in_game_ui/UIBackground/GameUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="in_game_ui/UIBackground/GameUI/RightCenterContainer"]
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="in_game_ui/UIBackground/GameUI/RightCenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "End Turn
"

[node name="CenterCenterContainer" type="CenterContainer" parent="in_game_ui/UIBackground/GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -15.5
offset_right = 110.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="in_game_ui/UIBackground/GameUI/CenterCenterContainer"]
layout_mode = 2

[node name="Action_1" type="Button" parent="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Action 1"

[node name="Action_2" type="Button" parent="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Action 2
"

[node name="Action_3" type="Button" parent="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Action 3"

[node name="LeftCenterContainer" type="CenterContainer" parent="in_game_ui/UIBackground/GameUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="in_game_ui/UIBackground/GameUI/LeftCenterContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="in_game_ui/UIBackground/GameUI/LeftCenterContainer/HBoxContainer"]
layout_mode = 2
text = "..."

[node name="InstructionContainer" type="CenterContainer" parent="in_game_ui"]
top_level = true
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -204.5
offset_right = 391.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="in_game_ui/InstructionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="in_game_ui/InstructionContainer/VBoxContainer"]
layout_mode = 2
text = "You are the invasive species!"

[node name="Label2" type="Label" parent="in_game_ui/InstructionContainer/VBoxContainer"]
layout_mode = 2
text = "1. To win, Eat all of the Farmer's crops.

2. Be careful! If the Farmer moves to a space where your weeds are, the Farmer will uproot them! 
Use the Protect action to prevent your weeds from getting pulled. If all your weeds get pulled,
you lose!

3. Use the action buttons below to Plant, Protect, or Eat with your Weeds. Each button can be pressed
once per turn.

4. Click End Turn when you are finished pressing any buttons you want to use this turn."

[node name="GameMusic" type="AudioStreamPlayer2D" parent="in_game_ui/InstructionContainer"]
stream = ExtResource("4_a3gbj")

[node name="PauseMenuContainer" type="CenterContainer" parent="in_game_ui"]
visible = false
top_level = true
z_index = 101
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -144.0
offset_right = 136.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="in_game_ui/PauseMenuContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="in_game_ui/PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeScroll" type="HScrollBar" parent="in_game_ui/PauseMenuContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="HelpButton" type="Button" parent="in_game_ui/PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="QuitButton" type="Button" parent="in_game_ui/PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CancelButton" type="Button" parent="in_game_ui/PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="in_game_ui/UIBackground/GameUI/RightCenterContainer/HBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="in_game_ui/UIBackground/GameUI/CenterCenterContainer/HBoxContainer/Action_3" to="." method="_on_action_3_pressed"]
[connection signal="pressed" from="in_game_ui/UIBackground/GameUI/LeftCenterContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="scrolling" from="in_game_ui/PauseMenuContainer/VBoxContainer/VolumeScroll" to="." method="_on_volume_scroll_scrolling"]
[connection signal="value_changed" from="in_game_ui/PauseMenuContainer/VBoxContainer/VolumeScroll" to="." method="_on_volume_scroll_value_changed"]
[connection signal="pressed" from="in_game_ui/PauseMenuContainer/VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="in_game_ui/PauseMenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="in_game_ui/PauseMenuContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
